# SortingAlgorithms

./: CMakeLists.txt  CMakePresets.json  README.md
SortingAlgorithms/: CMakeLists.txt
SortingAlgorithms/include/: BucketSort.h  MergeSort.h  MovieRating.h  QuickSort.h  RedBlackTree.h
SortingAlgorithms/src/: BucketSort.cpp  MergeSort.cpp  QuickSort.cpp  RedBlackTree.cpp  main.cpp
SortingAlgorithms/tests/: TestMain.cpp
